<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation" >
    <string name="app_name">Набат</string>
    <string name="reg_str">ПОЗВОНИТЬ\nНА БЕСПЛАТНУЮ\nГОРЯЧУЮ ЛИНИЮ</string>
    <string name="nabat_str">НАБАТ</string>
    <string name="NABAT_PHONE_URL">tel:+78002225154</string>
    <string name="facebook_app_id">1772183606429290</string>
    <string name="loginFacebookButton">Войти через фейсбук</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_register">register</string>
    <string name="fio">ФИО*</string>
    <string name="company">НАИМЕНОВАНИЕ КОМПАНИИ</string>
    <string name="companyINN">ИНН</string>
    <string name="email">ЭЛЕКТРОННАЯ ПОЧТА*</string>
    <string name="phone_num">НОМЕР ТЕЛЕФОНА</string>
    <string name="login_str">ВХОД</string>
    <string name="none">none</string>
    <string name="none_str">none</string>
    <string name="none_img">none_img</string>
    <string name="btn_reg">СОХРАНИТЬ</string>
    <string name="none_img1">none</string>
    <string name="title_activity_call">Call</string>
    <string name="access_code">Код доступа</string>
    <string name="login_in">ВОЙТИ</string>
    <string name="reg_information">поля отмеченные знаком (*) обязательны  для заполнения</string>
    <string name="companyData">ДАННЫЕ КОМПАНИИ</string>
    <string name="about_nabat">О системе "Набат"</string>
    <string name="tech_sup">Техническая поддержка</string>
    <string name="self_def">Самооборона при проверке</string>
    <string name="exit">Выход</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_text">ДЛЯ БЕСПЛАТНОЙ ЮРИДИЧЕСКОЙ\u000A
    КОНСУЛЬТАЦИИ ПРИ ПРОВЕРКЕ\u000A
    НАЖМИТЕ КНОПКУ</string>
    <string name="about_nabat_text">
        Агрегатор юристов и адвокатов, специализирующихся на различных видах проверок бизнеса
        по всей территории РФ. Основные направления проверок – полицейская проверка,
        налоговая и трудовая инспекции, роспотребнадзор, МЧС.
        \u000A
        \u000A
        \u000A
        Юристы и адвокаты оказывают бесплатные консультации
        по плановым и внеплановым, выездным и камеральным проверкам.
        \u000A
        \u000A
        </string>
    <string-array name="planets_array">
        <item>Республика Адыгея</item>
        <item>Республика Башкортостан</item>
        <item>Республика Бурятия</item>
        <item>Республика Алтай</item>
        <item>Республика Дагестан</item>
        <item>Республика Ингушетия</item>
        <item>Кабардино-Балкарская Республика</item>
        <item>Республика Калмыкия</item>
        <item>Республика Карачаево-Черкесия</item>
        <item>Республика Карелия</item>
        <item>Республика Коми</item>
        <item>Республика Марий Эл</item>
        <item>Республика Мордовия</item>
        <item>Республика Саха (Якутия)</item>
        <item>Республика Северная Осетия-Алания</item>
        <item>Республика Татарстан</item>
        <item>Республика Тыва</item>
        <item>Удмуртская Республика</item>
        <item>Республика Хакасия</item>
        <item>Чеченская Республика</item>
        <item>Чувашская Республика - Чувашия</item>
        <item>Алтайский край</item>
        <item>Краснодарский край</item>
        <item>Красноярский край</item>
        <item>Приморский край</item>
        <item>Ставропольский край</item>
        <item>Хабаровский край</item>
        <item>Амурская область</item>
        <item>Архангельская область</item>
        <item>Астраханская область</item>
        <item>Белгородская область/</item>
        <item>Брянская область</item>
        <item>Владимирская область</item>
        <item>Волгоградская область</item>
        <item>Вологодская область</item>
        <item>Воронежская область</item>
        <item>Ивановская область</item>
        <item>Иркутская область</item>
        <item>Калининградская область</item>
        <item>Калужская область</item>
        <item>Камчатский край</item>
        <item>Кемеровская область</item>
        <item>Кировская область</item>
        <item>Костромская область</item>
        <item>Курганская область</item>
        <item>Курская область</item>
        <item>Ленинградская область</item>
        <item>Липецкая область</item>
        <item>Магаданская область</item>
        <item>Московская область</item>
        <item>Мурманская область</item>
        <item>Нижегородская область</item>
        <item>Новгородская область</item>
        <item>Новосибирская область</item>
        <item>Омская область</item>
        <item>Оренбургская область</item>
        <item>Орловская область</item>
        <item>Пензенская область</item>
        <item>Пермский край</item>
        <item>Псковская область</item>
        <item>Ростовская область</item>
        <item>Рязанская область</item>
        <item>Самарская область</item>
        <item>Саратовская область</item>
        <item>Сахалинская область</item>
        <item>Свердловская область</item>
        <item>Смоленская область</item>
        <item>Тамбовская область</item>
        <item>Тверская область</item>
        <item>Томская область</item>
        <item>Тульская область</item>
        <item>Тюменская область</item>
        <item>Ульяновская область</item>
        <item>Челябинская область</item>
        <item>Забайкальский край</item>
        <item>Ярославская область</item>
        <item>г. Москва</item>
        <item>г. Санкт-Петербург</item>
        <item>Еврейская автономная область</item>
        <item>Ненецкий автономный округ</item>
        <item>Ханты-Мансийский автономный округ - Югра</item>
        <item>Чукотский автономный округ</item>
        <item>Республика Крым        </item>
        <item>г. Севастополь</item>
    </string-array>
    <string-array name="steps">
        <item>Общая информация</item>
        <item>Полицейская проверка</item>
        <item>Налоговая проверка</item>
        <item>Трудовая проверка</item>
    </string-array>
    <string name="all_recommendations">
        <b>1.</b> <b>Проверяйте график плановых проверок на сайте</b> https://proverki.gov.ru/ .
        Если вы найдете свою компанию в списке, начните готовиться к проверке заранее –
        приведите в порядок документы, позвоните юристу или адвокату.\u000A
        \u000A
        <b>2.</b> <b>Заведите журнал проверок.</b> По закону такой журнал должен быть в каждой организации.\u000A
        \u000A
        <b>3.</b> Внимательно читайте предъявляемые документы: постановление и служебные удостоверения
        проверяющих. Список проверяющих должен соответствовать
        списку, указанному в постановлении (предписании).
        Вы вправе не пустить «лишних проверяющих» на порог.\u000A
        \u000A
        <b>4.</b> <b>НИКОГДА НЕ ПЫТАЙТЕСЬ ДАТЬ ИНСПЕКТОРУ ВЗЯТКУ.</b>
        Все проверяющие фиксируют происходящее не только на диктофон, но и на видео.\u000A
        \u000A
        <b>5.</b> <b>Записывайте на диктофон все разговоры проверяющих.</b>
        Это может стать вашим козырем в случае обжалования решения инспекторов.\u000A
        \u000A
        <b>6.</b> <b>Вносите все замечания в протокол.</b>\u000A
        \u000A
        <b>7.</b> <b>Необходимо реагировать на любые документы или просьбы,
        поступающие из проверяющих органов, а так же на жалобы физических лиц.</b>
        Любая жалоба ведет к проверке.
    </string>
    <string name="police_check">
        <b>1.</b><b>Полицейские должны собственноручно зафиксировать цель, дату и время визита в специальном журнале проверок на пункте охраны.</b>
        Это необходимо для того, чтобы можно было доказать факт проведения проверки в случае, если вы решите подавать
        жалобу на правонарушения полицейских. Если у вас нет журнала проверок, обязательно заведите его.\u000A
        \u000A
        <b>2.</b><b>«Предъявите служебное удостоверение!»</b> - так должно начинаться общение с полицейскими.
        Полностью перепишите всю информацию! Если откажутся предъявлять удостоверение, звоните 02.\u000A
        \u000A
        <b>3.</b> <b>«Уточните причину визита и  предъявите постановление, на основании которого проводится проверка»</b>
        Попросите копию постановления. Она вам пригодится при обжаловании допущенных нарушений.
        \u000A
        <b>4.</b><b>Звоните в организацию, которая вынесла постановление, чтобы сверить его номер.</b>\u000A
        \u000A
        <b>5.</b><b>Сверьте ФИО сотрудников, указанных в постановлении, с личными данными присутствующих полицейских.</b>
        В проверке могут участвовать только те, кто указан в документе!
        Вы имеете право не пустить на порог «лишних» проверяющих.\u000A
        \u000A
        <b>6.</b><b>Проверьте наименование компании, указанной в постановлении.</b> Если оно не совпадает с названием вашей фирмы,
        то вы можете воспротивиться полицейской проверке.\u000A
        \u000A
        <b>7.</b> <b>Прикрепите сотрудника к каждому полицейскому.</b>Это нужно для того, чтобы в ходе
        проверки не возникало случаев изымания вещей, которых в офисе не было.\u000A
        \u000A
        <b>8.</b> <b>Если сотрудники допускают нарушения, вносите замечания в протокол.</b>Даже если вас будут уверять в том,
        что все действия законны, все равно вносите замечания.\u000A
        \u000A
        <b>9.</b> <b>В конце проверки проверьте протокол.</b>В нем должны быть подписи всех лиц,
        присутствующих при полицейской проверке.
        Вносите замечания, если что-то указано не так. Обязательно сделайте копию протокола.\u000A
        \u000A
        <b>10.</b> <b>Прежде чем выполнять требования полицейских, проконсультируйтесь с адвокатом или юристом.</b>
        Стоит также помнить о том, что при возникновении каких-либо нарушений в процессе полицейской
        проверки нужно звонить 02, в прокуратуру и Управление собственной безопасности МВД.
    </string>
    <string name="set_password">ПАРОЛЬ*</string>
    <string name="region_text">РЕГИОН*</string>
</resources>