<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context="com.example.alex.nabat.FragmentRegistration">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|top"
                android:weightSum="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="-10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/fio"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/userNameText"
                        android:textColor="@color/textColor"
                        android:layout_marginTop="30dp"/>

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:id="@+id/userName"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@android:drawable/editbox_background"
                        android:inputType="none"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/phone_num"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/phoneNumberText"
                        android:textColor="@color/textColor" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:id="@+id/phoneNumber"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@android:drawable/editbox_background"
                        android:inputType="phone|none"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/email"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/emailText"
                        android:textColor="@color/textColor" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:id="@+id/email"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@android:drawable/editbox_background"
                        android:inputType="textEmailAddress"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/set_password"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/passwordText"
                        android:textColor="@color/textColor" />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:id="@+id/password"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@android:drawable/editbox_background"
                        android:inputType="textPassword"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/region_text"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:id="@+id/regionText"
                        android:textColor="@color/textColor" />

                    <Spinner
                        android:id="@+id/region_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:background="@android:drawable/editbox_background"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/company"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/companyNameText"
                        android:textColor="@color/textColor" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:id="@+id/companyName"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@android:drawable/editbox_background"
                        android:inputType="none"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/companyINN"
                        android:layout_marginLeft="25dp"
                        android:id="@+id/companyINN"
                        android:textColor="@color/textColor" />

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:id="@+id/inn"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="25dp"
                        android:background="@android:drawable/editbox_background"
                        android:inputType="none"
                        android:textColor="#000000" />

                    <Button
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_reg"
                        android:id="@+id/registrationButton"
                        android:background="@color/buttonColor"
                        android:textColor="#ffffff"
                        android:textSize="25sp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center_horizontal|bottom" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</FrameLayout>
